err
cc1: warning: command line option ‘-std=c++11’ is valid for C++/ObjC++ but not for C
In file included from ./include/global.h:5:0,
                 from ./include/base.h:40,
                 from ./src/http.c:1:
./include/device.h:86:1: warning: useless storage class specifier in empty declaration
 };
 ^
./src/http.c: In function ‘http_parse_url’:
./src/http.c:11:5: warning: assignment discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  p1 = url;
     ^
./src/http.c:8:6: warning: unused variable ‘ret’ [-Wunused-variable]
  int ret, len;
      ^
./src/http.c: In function ‘http_packet_size’:
./src/http.c:64:10: warning: implicit declaration of function ‘close_fd’ [-Wimplicit-function-declaration]
          close_fd(sockfd);
          ^
./src/http.c:71:14: warning: format ‘%X’ expects argument of type ‘unsigned int *’, but argument 3 has type ‘uint64_t * {aka long unsigned int *}’ [-Wformat=]
  sscanf(buf, "%8X", &file);
              ^
./src/http.c: In function ‘http_parse_code’:
./src/http.c:161:6: error: ‘ret’ undeclared (first use in this function)
  if((ret = recv(sockfd, buf, HTTP_BUFLEN, 0)) <= 0)
      ^
./src/http.c:161:6: note: each undeclared identifier is reported only once for each function it appears in
./src/http.c: In function ‘http_get’:
./src/http.c:218:11: warning: implicit declaration of function ‘connect_server’ [-Wimplicit-function-declaration]
     ret = connect_server(sockfd, host_ip, port, TIME_OUT);
           ^
./src/http.c:227:5: warning: implicit declaration of function ‘send_msg’ [-Wimplicit-function-declaration]
  if(send_msg(sockfd, buf, strlen(buf)) !=  SUCCESS)
     ^
./src/http.c:238:2: warning: implicit declaration of function ‘_device_seek’ [-Wimplicit-function-declaration]
  _device_seek(dev->fd, file_section);
  ^
./src/http.c:245:3: warning: value computed is not used [-Wunused-value]
   (void *)time(&current_time);
   ^
In file included from ./src/http.c:1:0:
./include/base.h:47:21: warning: format ‘%lu’ expects argument of type ‘long unsigned int’, but argument 3 has type ‘long long unsigned int’ [-Wformat=]
         do { printf("File: "__FILE__", Line: %05d: " format"\r\n", __LINE__, ##__VA_ARGS__); \
                     ^
./src/http.c:250:4: note: in expansion of macro ‘DEBUG’
    DEBUG("HTTP download info->download_rate %lu KB/s, info->total_size %lu KB, info->progress %d",info->download_rate/1000, info->total_size/1000, info->progress);
    ^
./include/base.h:47:21: warning: format ‘%lu’ expects argument of type ‘long unsigned int’, but argument 4 has type ‘long long unsigned int’ [-Wformat=]
         do { printf("File: "__FILE__", Line: %05d: " format"\r\n", __LINE__, ##__VA_ARGS__); \
                     ^
./src/http.c:250:4: note: in expansion of macro ‘DEBUG’
    DEBUG("HTTP download info->download_rate %lu KB/s, info->total_size %lu KB, info->progress %d",info->download_rate/1000, info->total_size/1000, info->progress);
    ^
./include/base.h:47:21: warning: format ‘%d’ expects argument of type ‘int’, but argument 5 has type ‘long unsigned int’ [-Wformat=]
         do { printf("File: "__FILE__", Line: %05d: " format"\r\n", __LINE__, ##__VA_ARGS__); \
                     ^
./src/http.c:250:4: note: in expansion of macro ‘DEBUG’
    DEBUG("HTTP download info->download_rate %lu KB/s, info->total_size %lu KB, info->progress %d",info->download_rate/1000, info->total_size/1000, info->progress);
    ^
./src/http.c:291:4: warning: implicit declaration of function ‘write_sector’ [-Wimplicit-function-declaration]
    write_sector(dev->fd, buf, HTTP_BUFLEN / 512);
    ^
./src/http.c:193:11: warning: unused variable ‘total_done’ [-Wunused-variable]
  uint64_t total_done = 0;
           ^
./src/http.c:191:11: warning: unused variable ‘packet_len’ [-Wunused-variable]
  uint32_t packet_len = 0;
           ^
./src/http.c:188:11: warning: unused variable ‘count’ [-Wunused-variable]
  uint64_t count = 0;
           ^
./src/http.c:187:7: warning: unused variable ‘range’ [-Wunused-variable]
  char range[32];
       ^
./src/http.c:185:6: warning: unused variable ‘code’ [-Wunused-variable]
  int code = http_parse_code(sockfd);
      ^
./src/http.c:184:11: warning: unused variable ‘file_blk’ [-Wunused-variable]
  uint64_t file_blk =  (uint64_t)(file_section  / (HTTP_BUFLEN / 512));
           ^
./src/http.c:182:6: warning: unused variable ‘len’ [-Wunused-variable]
  int len = 0;
      ^
make: *** [http.o] Error 1
